循环语句练习

--- a/day1/sitong.html
+++ b/day1/sitong.html
@@ -14,10 +14,13 @@
                        border-radius: 15px;
                        background-color:pink;
                        flex-direction: column;
-                      justify-content: flex-start;
+                      justify-content:space-between;
+
                  } 
                .two {
-                   justify-content: flex-end;
+                   display: flex;
+                    flex-direction: column-reverse;
+                    justify-content: space-between; 
                }        
                       
                     
