修改的代码

--- a/day1/2.html
+++ b/day1/2.html
@@ -16,10 +16,12 @@
                        background-color:pink;
                        flex-direction: column;
                        justify-content: space-between;
-                       align-items:center;
                       
                     
                 }
+                .item:nth-child(2) {
+                        align-self: flex-end;}
+
                    .item {
                     height: 15px;
                     width: 15px;
